--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.1.6",
     "@types/node": "^18.0.6",
-    "dotenv": "^16.1.3",
+    "dotenv": "^16.1.4",
     "glob": "^8.1.0",
     "hnswlib-node": "^1.4.2",
-    "langchain": "^0.0.88",
+    "langchain": "^0.0.91",
     "node-fetch": "^3.2.6",
     "openai": "^3.1.0",
     "pickle": "^0.2.0",
