--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "langchain": "^0.0.91",
     "node-fetch": "^3.2.6",
     "openai": "^3.1.0",
+    "pdf-to-text": "0.0.7",
     "pickle": "^0.2.0",
     "prompt-sync": "^4.2.0"
   }
